<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.kinectafrica.android.activity.LoginActivity">
    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/kinect_bg"
        android:contentDescription="@string/kinect_login_background" />
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/kinect_logo_arrow"
                android:contentDescription="@string/kinect_logo" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@mipmap/kinect_inverse"
                android:contentDescription="@string/kinect_text" />
        </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            app:backgroundTint="@color/com_facebook_button_background_color"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_button_text"
            android:textSize="16sp"
            android:padding="20dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_and_c_note"/>
    </LinearLayout>
</RelativeLayout>
