<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kinectafrica.android.fragment.MessagesFragment">

    <LinearLayout
        android:id="@+id/layout_no_messages"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_thumb_up_primary_24dp"
            android:layout_width="96dp"
            android:layout_height="96dp" />
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/no_messages"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_progress_messages"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="96dp"
            android:layout_height="96dp" />
        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/finding_messages"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:text="@string/messages"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/separator"
            android:layout_width="80dp"
            android:layout_height="1dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_messages"
            android:scrollbars="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>
