<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kinectafrica.android.fragment.ProfileFragment">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_image"
                android:src="@drawable/empty_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/text_name_age"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/text_location"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:id="@+id/text_description"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_settings"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/colorPrimary"
                android:text="@string/action_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_margin="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_no_photos"
                android:visibility="gone"
                android:layout_marginTop="48dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_sentiment_dissatisfied_primary_24dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <TextView
                    android:text="@string/no_photos_found"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_profile_photos"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:layout_width="64dp"
                android:layout_height="64dp" />

            <LinearLayout
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_photos"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_profile_photos"
                    android:scrollbars="horizontal"
                    android:scrollbarSize="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_add_photo"
                    app:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_photo"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
