<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kinectafrica.android.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <RelativeLayout
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp">
                    <Button
                        android:id="@+id/text_toolbar"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:textColor="@color/white"
                        android:text="@string/k_i_n_e_c_t"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <com.kinectafrica.android.view.CustomViewPager
        android:id="@+id/container"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/match_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/blackOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_match_message"
                android:layout_margin="20dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:textSize="36sp"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"
                android:text="@string/match_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_match_message_2"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/amp"
                android:layout_centerInParent="true"
                android:textSize="24sp"
                android:text="@string/amp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_toStartOf="@id/amp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/amp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image_profile1"
                    android:gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/empty_image"  />
                <TextView
                    android:id="@+id/text_profile1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_toEndOf="@id/amp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/amp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image_profile2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/empty_image"  />
                <TextView
                    android:id="@+id/text_profile2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_goto_messages"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/start_messaging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
